<resources>
    <string name="app_name">FiveStarStyle</string>
    <string name="header_name">Five Star Style</string>
    <string name="btnText">Least Recently Worn</string>
    <string name="btnText2">Least Frequently Worn</string>
    <string name="titleText">FiveStarStats</string>
    <string name="take_pic">Take Picture + Upload to Closet</string>
    <string name="settings">Settings</string>
    <string name="test_add">Test Add</string>
    <string name="camera_preview_image">CameraPreviewImage</string>
    <string name="get_started">Get Started</string>
    <string name="email_id">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="failed">Login Failed</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="top_star">top_star</string>
    <string name="home_header">home_header</string>
    <string name="choose_my_outfit">Choose My Outfit</string>
    <string name="view_my_closet">View My Closet</string>
    <string name="overview">Overview</string>
    <string name="home">Home</string>
    <string name="txtGreeting">Good Afternoon</string>
    <string name="txtOutfitSelector">What type of outfit are you looking for today?</string>
    <string name="checkboxWork">Work</string>
    <string name="checkboxCasual">Casual</string>
    <string name="checkboxCocktail">Cocktail</string>
    <string name="checkboxGym">Gym</string>
    <string name="checkboxBar">Bar</string>
    <string name="checkboxFormal">Formal</string>
    <string name="btnChooseOutfit">Choose My Outfit</string>
    <string name="tabLocation">Location</string>
    <string name="tabStyle">Style</string>
    <string name="txtTabInstructions">Choose up to one from each section.</string>

    <string name="locationTabCheckOne">Work</string>
    <string name="locationTabCheckTwo">Bar</string>
    <string name="locationTabCheckThree">Gym</string>

    <string name="formalityTabCheckOne">Casual</string>
    <string name="formalityTabCheckTwo">Cocktail</string>
    <string name="formalityTabCheckThree">Formal</string>

    <string name="styleTabCheckOne">Dresses</string>
    <string name="styleTabCheckTwo">Tops/Bottoms</string>
    <string name="styleTabCheckThree">Dresses/Suits</string>

    <string name="choose_seasons">CHOOSE SEASONS</string>
    <string name="choose_all_that_apply">CHOOSE ALL THAT APPLY</string>
    <string name="confirm_colors">CONFIRM COLORS</string>
    <string name="confirm_labels">CONFIRM LABELS</string>
    <string name="category">CATEGORY:</string>
    <string name="color">COLORS:</string>
    <string name="season">SEASONS:</string>
    <string name="event">EVENTS:</string>

    <string name="season_Spring">Spring</string>
    <string name="season_Summer">Summer</string>
    <string name="season_Fall">Fall</string>
    <string name="season_Winter">Winter</string>

    <string name="category_top">Tops</string>
    <string name="category_bottom">Bottoms</string>
    <string name="category_dress">Dresses / Suits</string>
    <string name="category_outerwear">Outerwear</string>
    <string name="category_shoe">Shoes</string>
    <string name="category_accessories">Accessories</string>

    <string name="label_top">top</string>
    <string name="label_bottom">bottom</string>
    <string name="label_dress">dress_or_suit</string>
    <string name="label_outerwear">outerwear</string>
    <string name="label_shoes">shoes</string>
    <string name="label_accessories">accessories</string>


    <string name="action_gallery">Gallery</string>
    <string name="permission_request">This app needs to access files on your device</string>
    <string name="preview_image">preview_image</string>
    <string name="title_activity_pull_images">PullImages</string>
    <string name="delete_this_item">DELETE THIS ITEM</string>

    <string name="try_again">Try Again</string>

</resources>
