<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_ConfirmLabelsAll">


   <ImageView
       android:layout_width="400dp"
       android:layout_height="125dp"
       android:layout_marginTop="80dp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:id="@+id/choose_one_category"
       android:background="@drawable/choose_one"
       />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_one_category"
        android:id="@+id/category_top"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_top"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_one_category"
        android:layout_toRightOf="@id/category_top"
        android:id="@+id/category_bottom"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_alignLeft="@id/category_shoe"
        android:text="@string/category_bottom"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_bottom"
        android:id="@+id/category_dress"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_dress"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_dress"
        android:id="@+id/category_outerwear"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_outerwear"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_dress"
        android:layout_toRightOf="@id/category_outerwear"
        android:id="@+id/category_shoe"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_shoe"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_shoe"
        android:id="@+id/category_accessories"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_accessories"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />


</RelativeLayout>
