<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClosetStatistics">


    <LinearLayout
        android:id="@+id/stars_linearlayout"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stars_linearlayout"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_all_that_apply"
        android:id="@+id/choose_category"
        android:textColor="@color/colorPrimary"
        android:textSize="31sp" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_category"
        android:id="@+id/category_top"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_top"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_category"
        android:layout_toRightOf="@id/category_top"
        android:id="@+id/category_bottom"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_alignLeft="@id/category_shoe"
        android:text="@string/category_bottom"
        android:textSize="25sp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_bottom"
        android:id="@+id/category_dress"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_dress"
        android:textSize="25sp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_dress"
        android:id="@+id/category_outerwear"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_outerwear"
        android:textSize="25sp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_dress"
        android:layout_toRightOf="@id/category_outerwear"
        android:id="@+id/category_shoe"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_shoe"
        android:textSize="25sp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_shoe"
        android:id="@+id/category_accessories"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:text="@string/category_accessories"
        android:textSize="25sp"
        />


</RelativeLayout>
