<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmLabelsAll">


    <ImageView
        android:layout_width="400dp"
        android:layout_height="125dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/choose_one_season"
        android:background="@drawable/choose_all"
        />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_one_season"
        android:id="@+id/season_spring"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="40dp"
        android:text="@string/season_Spring"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_one_season"
        android:layout_toRightOf="@id/season_spring"
        android:id="@+id/season_summer"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="40dp"
        android:text="@string/season_Summer"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/season_summer"
        android:id="@+id/season_fall"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="40dp"
        android:text="@string/season_Fall"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/season_spring"
        android:layout_alignLeft="@id/season_summer"
        android:id="@+id/season_winter"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="55dp"
        android:text="@string/season_Winter"
        android:textSize="25sp"
        android:onClick="onCheckboxClicked"
        />






</RelativeLayout>
