
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClosetStatistics">

    <LinearLayout
        android:id="@+id/stars_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:contentDescription="@string/top_star"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_round_grade_24px" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/choose_all_that_apply"
        android:textColor="@color/colorPrimary"
        android:id="@+id/choose_season"
        android:textSize="31sp" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_season"
        android:id="@+id/season_spring"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="40dp"
        android:text="@string/season_Spring"
        android:textSize="25sp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/season_spring"
        android:id="@+id/season_summer"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="40dp"
        android:text="@string/season_Summer"
        android:textSize="25sp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/season_summer"
        android:id="@+id/season_fall"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="40dp"
        android:text="@string/season_Fall"
        android:textSize="25sp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/season_fall"
        android:id="@+id/season_winter"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="40dp"
        android:text="@string/season_Fall"
        android:textSize="25sp"
        />






</RelativeLayout>
