<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context= ".Activity_ImageDetail">


    <ImageView
        android:id="@+id/imageDetails"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/image_details" />

    <ImageView
        android:id="@+id/imageFromDB"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageDetails"
        android:layout_marginTop="5dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>

    <Button
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/imageFromDB"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#1B4F72"
        android:text="@string/delete_this_item" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@id/button_id"
        android:layout_marginStart="20dp"
        android:text="@string/category"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/colorText"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@id/categoryText"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/color"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/seasonText"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@id/colorText"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/season"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/eventText"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@id/seasonText"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/event"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />


    <TextView
        android:id="@+id/categoryPulledText"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@id/button_id"
        android:layout_toRightOf="@id/categoryText"
        android:layout_marginStart="5dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/colorPulledText"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@id/categoryPulledText"
        android:layout_toRightOf="@id/colorText"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/seasonPulledText"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@id/colorPulledText"
        android:layout_toRightOf="@id/seasonText"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/eventPulledText"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_toRightOf="@id/eventText"
        android:layout_below="@id/seasonPulledText"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />


</RelativeLayout>