<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseOutfit2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="381dp"
        android:layout_height="96dp"
        android:layout_marginStart="425dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/txtOutfitSelector"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/simpleFrameLayout"
        app:layout_constraintEnd_toStartOf="@+id/simpleFrameLayout"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="79dp"
        android:text="@string/txtGreeting"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/simpleFrameLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="950dp"
        android:layout_marginEnd="475dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txtTabInstructions"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/simpleFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/simpleFrameLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="1125dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="69dp"
        android:text="@string/btnChooseOutfit"
        android:theme="@style/ButtonTheme"
        app:layout_constraintBottom_toTopOf="@+id/simpleFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TabLayout
        android:id="@+id/simpleTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toTopOf="@+id/simpleFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341"
        app:tabBackground="@color/colorPrimaryLight"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@color/colorPrimary" />

    <FrameLayout
        android:id="@+id/simpleFrameLayout"
        android:layout_width="411dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" >

    </FrameLayout>

    <LinearLayout
        android:id="@+id/rootContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="550dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleFrameLayout">

    </LinearLayout>



    </android.support.constraint.ConstraintLayout>